added myself as the author of the project

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "top-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Azat Nasyrov <azat.nasyrov31@gmail.com>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
