--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.2",
+    "telegraf": "^4.16.3",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
