--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/serve-static": "^4.0.1",
     "app-root-path": "^3.1.0",
     "axios": "^1.6.7",
@@ -51,6 +52,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/app-root-path": "^1.2.8",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.17",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.2",
